<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/black"
        android:text="@string/about_us_title"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/dark_orange"
        android:gravity="center"
        android:text="@string/about_us_text1"
        android:textSize="16dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/dark_orange"
        android:gravity="center"
        android:text="@string/about_us_text2"
        android:textSize="16dp"
        android:textColor="@color/white"/>

</LinearLayout>