<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/black"
        android:text="@string/request_title"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/request_select_dj_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/dark_orange"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/request_title_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/dark_orange"
        android:textSize="20dp"
        android:hint="@string/enter_title"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/request_artist_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/dark_orange"
        android:textSize="20dp"
        android:hint="@string/enter_artist"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/request_submit_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20dp"/>

</LinearLayout>